--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "ng build --configuration production",
+    "build:prod": "ng build --configuration production --base-href https://mherczku.github.io/animals/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "deploy": "ng build --configuration=production --base-href https://mherczku.github.io/animals/ && angular-cli-ghpages --dir=dist/animals --branch gh-pages"
