--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "animals",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,7 +8,8 @@
     "build:prod": "ng build --configuration production --base-href https://mherczku.github.io/animals/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng build --configuration=production --base-href https://mherczku.github.io/animals/ && angular-cli-ghpages --dir=dist/animals --branch gh-pages"
+    "deploy": "ng build --configuration=production --base-href https://mherczku.github.io/animals/ && angular-cli-ghpages --dir=dist/animals --branch gh-pages",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -30,11 +31,19 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.4",
+    "@angular-eslint/builder": "16.0.3",
+    "@angular-eslint/eslint-plugin": "16.0.3",
+    "@angular-eslint/eslint-plugin-template": "16.0.3",
+    "@angular-eslint/schematics": "16.0.3",
+    "@angular-eslint/template-parser": "16.0.3",
     "@angular/cli": "^16.0.4",
     "@angular/compiler-cli": "^16.0.4",
     "@types/jasmine": "~4.3.0",
+    "@typescript-eslint/eslint-plugin": "5.59.7",
+    "@typescript-eslint/parser": "5.59.7",
     "angular-cli-ghpages": "^1.0.6",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.40.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
