--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,6 +20,12 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Lint
+      run: npm run lint
+
+    - name: Tests
+      run: npm run test
+
     - name: Build
       run: npm run build:prod
 
