--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -24,7 +24,7 @@ jobs:
       run: npm run lint
 
     - name: Tests
-      run: npm run test
+      run: npm run test:prod
 
     - name: Build
       run: npm run build:prod
